fix: updated dialog colors and spacing

--- a/src/styles/theming/dark/dark-mode-theme.sass
+++ b/src/styles/theming/dark/dark-mode-theme.sass
@@ -9,6 +9,7 @@
 @import text-dark.sass
 @import inputs-dark.sass
 @import bubbles-dark
+@import dialog-dark
 
 @mixin dark-mode-vars
   @include dark-base
@@ -17,3 +18,4 @@
   @include text-dark
   @include inputs-dark
   @include bubbles-dark
+  @include dialog-dark
