--- a/src/styles/theming/light/light-mode-theme.sass
+++ b/src/styles/theming/light/light-mode-theme.sass
@@ -9,6 +9,7 @@
 @import text-light.sass
 @import inputs-light.sass
 @import bubbles-light.sass
+@import dialog-light.sass
 
 @mixin light-mode-vars
   @include light-base
@@ -17,3 +18,4 @@
   @include text-light
   @include inputs-light
   @include bubbles-light
+  @include dialog-light
